# Soil-Test-Kit-

./: .cproject  .gitignore  README.md  sdkconfig.defaults
main/: CMakeLists.txt  main.c
